Add styles for webpage

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Poem</title>
   </head>
   <body>
     <h1>Cebula</h1>
+    <h2><i>Wisława Szymborska</i></h2>
     <div>
       Co innego cebula. <br />Ona nie ma wnętrzności. <br />Jest sobą na wskroś
       cebula <br />
