Update header of index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Poem</title>
   </head>
   <body>
-    <h1>Cebula</h1>
+    <h1>"Cebula"</h1>
     <h2><i>Wisława Szymborska</i></h2>
     <div>
       Co innego cebula. <br />Ona nie ma wnętrzności. <br />Jest sobą na wskroś
