Update second header of index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h1>"Cebula"</h1>
-    <h2><i>Wisława Szymborska</i></h2>
+    <h2>Wisława Szymborska</h2>
     <div>
       Co innego cebula. <br />Ona nie ma wnętrzności. <br />Jest sobą na wskroś
       cebula <br />
