--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <h1>"Cebula"</h1>
     <h2>Wisława Szymborska</h2>
     <div>
-      Co innego cebula. <br />Ona nie ma wnętrzności. <br />Jest sobą na wskroś
-      cebula <br />
+      Co innego cebula. Ona nie ma wnętrzności. <br />Jest sobą na wskroś
+      cebula 
       do stopnia cebuliczności.<br />
-      Cebulasta na zewnątrz, <br />cebulowa do rdzenia, <br />mogłaby wejrzeć w
-      siebie <br />cebula bez przerażenia. <br />W nas obczyzna i dzikość
-      <br />ledwie skórą przykryta, <br />inferno w nas interny, <br />anatomia
-      gwałtowna, <br />a w cebuli cebula, <br />nie pokrętne jelita.
+      Cebulasta na zewnątrz, cebulowa do rdzenia, <br />mogłaby wejrzeć w
+      siebie cebula bez przerażenia. <br />W nas obczyzna i dzikość
+      ledwie skórą przykryta, <br />inferno w nas interny, anatomia
+      gwałtowna, <br />a w cebuli cebula, nie pokrętne jelita.
     </div>
   </body>
 </html>
